src/test/deca/context/invalid/sansobjet/print_expr.deca
// Description : essai de print d'un type qui n'est pas float, int ou string
// Resultat : Echec ligne 5 : true est un booléan ce n'est pas supporté.

{
    println(true);
}